update key to be a string
